Add Eclipse library browsing and media discovery APIs
